--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,6 @@
 .text-color {
   color: white;
 }
+.myBackground {
+  background-image: url("../src/images/nathan-dumlao-EdULZpOKsUE-unsplash.jpg");
+}
